<resources>
    <string name="app_name">CS489GroupProj</string>

    <string name="banner">PRACTICE YOUR SPELLING!</string>
    <string name="rules_banner">RULES:</string>
    <string name="step1">1. Choose your difficulty</string>
    <string name="step2">2. Press sound icon to hear word</string>
    <string name="step3">3. Type your spelling in the space</string>
    <string name="step4">4. Repeat steps 2/3 for each word</string>
    <string name="choose_difficulty_banner">CHOOSE DIFFICULTY:</string>
    <string name="best_score">Best Score:</string>
    <string name="init_score">0/15</string>

    <string name="banner2">SPELL THOSE WORDS!</string>
    <string name="all_done_spelling">ALL DONE!</string>

    <string name="welcome_statement">Are you ready to have FUN with learning? Click on a game!</string>
    <string name="welcome">WELCOME!</string>
    <string name="games">GAMES:</string>

    <string name="banner3">YOUR SCORE!</string>
    <string name="play_again">Play Again!</string>
    <string name="back_home">Back Home</string>
    <string name="space_race">SPACE RACE</string>
    <string name="a_b_c_d_e_f_g_h_i_j_k_l_m_n_o_p_q_r_s_t_u_v_w_x_y_z">A B C D E F G H I J K L M N O P Q R S T U V W X Y Z</string>
</resources>