<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        style="@style/BannerBox"
        android:layout_width="match_parent"
        android:id="@+id/welcome"
        android:text="@string/welcome"
        android:background="@color/blue"/>
    <AnalogClock
        android:id="@+id/clock"
        android:layout_marginTop="10dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/welcome"
        android:layout_centerHorizontal="true"

        />

    <TextView
        style="@style/GameLabel"
        android:id="@+id/intro"
        android:layout_below="@id/clock"
        android:text="@string/welcome_statement"/>


    <TextView
        style="@style/BannerBox"
        android:layout_width="wrap_content"
        android:id="@+id/games"
        android:layout_below="@id/intro"
        android:text="@string/games"/>

    <Button
        style="@style/GameButton"
        android:id="@+id/alphabet_game"
        android:layout_below="@id/games"
        android:text="ALPHABET GAME"
        android:background="@drawable/rounded_corners_blue"
        android:onClick="playAlphabet"/>

    <Button
        style="@style/GameButton"
        android:id="@+id/spelling_game"
        android:layout_below="@id/alphabet_game"
        android:text="SPELLING GAME"
        android:background="@drawable/rounded_corners_sea_green_dark"
        android:onClick="playSpelling"/>

    <Button
        style="@style/GameButton"
        android:id="@+id/math_game"
        android:layout_below="@id/spelling_game"
        android:text="MATH GAME"
        android:background="@drawable/rounded_corners_blue"
        android:onClick="playMath"/>

    <Button
        style="@style/GameButton"
        android:id="@+id/fun_game"
        android:layout_below="@id/math_game"
        android:text="BRAIN BREAK!"
        android:background="@drawable/rounded_corners_sea_green_dark"
        android:onClick="playGame"/>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>