<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/BannerBox"
            android:layout_width="match_parent"
            android:id="@+id/banner3"
            android:text="@string/banner3"
            android:background="@color/blue"/>

        <!-- ONE ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
        <Button
            style="@style/SpeechButton"
            android:id="@+id/megaphone1"
            android:layout_alignBottom="@id/num1"
            android:layout_below="@id/banner3"
            android:background="@drawable/megaphone"
            android:onClick="playWord"/>
        <TextView
            style="@style/WordNumber"
            android:id="@+id/num1"
            android:layout_below="@id/banner3"
            android:layout_toRightOf="@id/megaphone1"
            android:layout_toEndOf="@id/megaphone1"
            android:text="1."/>
        <TextView
            style="@style/WordSoln"
            android:id="@+id/soln1"
            android:layout_toRightOf="@id/num1"
            android:layout_toEndOf="@id/num1"
            android:layout_below="@id/banner3"/>
        <ImageView
            style="@style/RedX"
            android:id="@+id/red_x_1"
            android:layout_toRightOf="@id/soln1"
            android:layout_below="@id/banner3"/>

        <!-- TWO ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
        <Button
            style="@style/SpeechButton"
            android:id="@+id/megaphone2"
            android:layout_alignBottom="@id/num2"
            android:layout_below="@id/soln1"
            android:background="@drawable/megaphone"
            android:onClick="playWord"/>
        <TextView
            style="@style/WordNumber"
            android:id="@+id/num2"
            android:layout_below="@id/soln1"
            android:layout_toRightOf="@id/megaphone1"
            android:layout_toEndOf="@id/megaphone1"
            android:text="2."/>
        <TextView
            style="@style/WordSoln"
            android:id="@+id/soln2"
            android:layout_toRightOf="@id/num2"
            android:layout_toEndOf="@id/num2"
            android:layout_below="@id/soln1" />
        <ImageView
            style="@style/RedX"
            android:id="@+id/red_x_2"
            android:layout_toRightOf="@id/soln2"
            android:layout_below="@id/soln1"/>

        <!-- THREE ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
        <Button
            style="@style/SpeechButton"
            android:id="@+id/megaphone3"
            android:layout_alignBottom="@id/num3"
            android:layout_below="@id/soln2"
            android:background="@drawable/megaphone"
            android:onClick="playWord"/>
        <TextView
            style="@style/WordNumber"
            android:id="@+id/num3"
            android:layout_below="@id/soln2"
            android:layout_toRightOf="@id/megaphone2"
            android:layout_toEndOf="@id/megaphone2"
            android:text="3."/>
        <TextView
            style="@style/WordSoln"
            android:id="@+id/soln3"
            android:layout_toRightOf="@id/num3"
            android:layout_toEndOf="@id/num3"
            android:layout_below="@id/soln2" />
        <ImageView
            style="@style/RedX"
            android:id="@+id/red_x_3"
            android:layout_toRightOf="@id/soln3"
            android:layout_below="@id/soln2"/>
        <!-- FOUR ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
        <Button
            style="@style/SpeechButton"
            android:id="@+id/megaphone4"
            android:layout_alignBottom="@id/num4"
            android:layout_below="@id/soln3"
            android:background="@drawable/megaphone"
            android:onClick="playWord"/>
        <TextView
            style="@style/WordNumber"
            android:id="@+id/num4"
            android:layout_below="@id/soln3"
            android:layout_toRightOf="@id/megaphone3"
            android:layout_toEndOf="@id/megaphone3"
            android:text="4."/>
        <TextView
            style="@style/WordSoln"
            android:id="@+id/soln4"
            android:layout_toRightOf="@id/num4"
            android:layout_toEndOf="@id/num4"
            android:layout_below="@id/soln3" />
        <ImageView
            style="@style/RedX"
            android:id="@+id/red_x_4"
            android:layout_toRightOf="@id/soln4"
            android:layout_below="@id/soln3"/>

        <!-- FIVE ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
        <Button
            style="@style/SpeechButton"
            android:id="@+id/megaphone5"
            android:layout_alignBottom="@id/num5"
            android:layout_below="@id/soln4"
            android:background="@drawable/megaphone"
            android:onClick="playWord"/>
        <TextView
            style="@style/WordNumber"
            android:id="@+id/num5"
            android:layout_below="@id/soln4"
            android:layout_toRightOf="@id/megaphone4"
            android:layout_toEndOf="@id/megaphone4"
            android:text="5."/>
        <TextView
            style="@style/WordSoln"
            android:id="@+id/soln5"
            android:layout_toRightOf="@id/num5"
            android:layout_toEndOf="@id/num5"
            android:layout_below="@id/soln4" />
        <ImageView
            style="@style/RedX"
            android:id="@+id/red_x_5"
            android:layout_toRightOf="@id/soln5"
            android:layout_below="@id/soln4"/>

        <!-- SIX ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
        <Button
            style="@style/SpeechButton"
            android:id="@+id/megaphone6"
            android:layout_alignBottom="@id/num6"
            android:layout_below="@id/soln5"
            android:background="@drawable/megaphone"
            android:onClick="playWord"/>
        <TextView
            style="@style/WordNumber"
            android:id="@+id/num6"
            android:layout_below="@id/soln5"
            android:layout_toRightOf="@id/megaphone5"
            android:layout_toEndOf="@id/megaphone5"
            android:text="6."/>
        <TextView
            style="@style/WordSoln"
            android:id="@+id/soln6"
            android:layout_toRightOf="@id/num6"
            android:layout_toEndOf="@id/num6"
            android:layout_below="@id/soln5" />
        <ImageView
            style="@style/RedX"
            android:id="@+id/red_x_6"
            android:layout_toRightOf="@id/soln6"
            android:layout_below="@id/soln5"/>

        <!-- SEVEN ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
        <Button
            style="@style/SpeechButton"
            android:id="@+id/megaphone7"
            android:layout_alignBottom="@id/num7"
            android:layout_below="@id/soln6"
            android:background="@drawable/megaphone"
            android:onClick="playWord"/>
        <TextView
            style="@style/WordNumber"
            android:id="@+id/num7"
            android:layout_below="@id/soln6"
            android:layout_toRightOf="@id/megaphone6"
            android:layout_toEndOf="@id/megaphone6"
            android:text="7."/>
        <TextView
            style="@style/WordSoln"
            android:id="@+id/soln7"
            android:layout_toRightOf="@id/num7"
            android:layout_toEndOf="@id/num7"
            android:layout_below="@id/soln6" />
        <ImageView
            style="@style/RedX"
            android:id="@+id/red_x_7"
            android:layout_toRightOf="@id/soln7"
            android:layout_below="@id/soln6"/>

        <!-- EIGHT ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
        <Button
            style="@style/SpeechButton"
            android:id="@+id/megaphone8"
            android:layout_alignBottom="@id/num8"
            android:layout_below="@id/soln7"
            android:background="@drawable/megaphone"
            android:onClick="playWord"/>
        <TextView
            style="@style/WordNumber"
            android:id="@+id/num8"
            android:layout_below="@id/soln7"
            android:layout_toRightOf="@id/megaphone7"
            android:layout_toEndOf="@id/megaphone7"
            android:text="8."/>
        <TextView
            style="@style/WordSoln"
            android:id="@+id/soln8"
            android:layout_toRightOf="@id/num8"
            android:layout_toEndOf="@id/num8"
            android:layout_below="@id/soln7" />
        <ImageView
            style="@style/RedX"
            android:id="@+id/red_x_8"
            android:layout_toRightOf="@id/soln8"
            android:layout_below="@id/soln7"/>

        <!-- NINE ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
        <Button
            style="@style/SpeechButton"
            android:id="@+id/megaphone9"
            android:layout_alignBottom="@id/num9"
            android:layout_below="@id/soln8"
            android:background="@drawable/megaphone"
            android:onClick="playWord"/>
        <TextView
            style="@style/WordNumber"
            android:id="@+id/num9"
            android:layout_below="@id/soln8"
            android:layout_toRightOf="@id/megaphone8"
            android:layout_toEndOf="@id/megaphone8"
            android:text="9."/>
        <TextView
            style="@style/WordSoln"
            android:id="@+id/soln9"
            android:layout_toRightOf="@id/num9"
            android:layout_toEndOf="@id/num9"
            android:layout_below="@id/soln8" />
        <ImageView
            style="@style/RedX"
            android:id="@+id/red_x_9"
            android:layout_toRightOf="@id/soln9"
            android:layout_below="@id/soln8"/>

        <!-- TEN ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
        <Button
            style="@style/SpeechButton"
            android:id="@+id/megaphone10"
            android:layout_alignBottom="@id/num10"
            android:layout_below="@id/soln9"
            android:background="@drawable/megaphone"
            android:onClick="playWord"/>
        <TextView
            style="@style/WordNumber"
            android:id="@+id/num10"
            android:layout_below="@id/soln9"
            android:layout_toRightOf="@id/megaphone9"
            android:layout_toEndOf="@id/megaphone9"
            android:text="10."/>
        <TextView
            style="@style/WordSoln"
            android:id="@+id/soln10"
            android:layout_toRightOf="@id/num10"
            android:layout_toEndOf="@id/num10"
            android:layout_below="@id/soln9" />
        <ImageView
            style="@style/RedX"
            android:id="@+id/red_x_10"
            android:layout_toRightOf="@id/soln10"
            android:layout_below="@id/soln9"/>

        <!-- ELEVEN ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
        <Button
            style="@style/SpeechButton"
            android:id="@+id/megaphone11"
            android:layout_alignBottom="@id/num11"
            android:layout_below="@id/soln10"
            android:background="@drawable/megaphone"
            android:onClick="playWord"/>
        <TextView
            style="@style/WordNumber"
            android:id="@+id/num11"
            android:layout_below="@id/soln10"
            android:layout_toRightOf="@id/megaphone10"
            android:layout_toEndOf="@id/megaphone10"
            android:text="11."/>
        <TextView
            style="@style/WordSoln"
            android:id="@+id/soln11"
            android:layout_toRightOf="@id/num11"
            android:layout_toEndOf="@id/num11"
            android:layout_below="@id/soln10" />
        <ImageView
            style="@style/RedX"
            android:id="@+id/red_x_11"
            android:layout_toRightOf="@id/soln11"
            android:layout_below="@id/soln10"/>

        <!-- TWELVE ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
        <Button
            style="@style/SpeechButton"
            android:id="@+id/megaphone12"
            android:layout_alignBottom="@id/num12"
            android:layout_below="@id/soln11"
            android:background="@drawable/megaphone"
            android:onClick="playWord"/>
        <TextView
            style="@style/WordNumber"
            android:id="@+id/num12"
            android:layout_below="@id/soln11"
            android:layout_toRightOf="@id/megaphone11"
            android:layout_toEndOf="@id/megaphone11"
            android:text="12."/>
        <TextView
            style="@style/WordSoln"
            android:id="@+id/soln12"
            android:layout_toRightOf="@id/num12"
            android:layout_toEndOf="@id/num12"
            android:layout_below="@id/soln11" />
        <ImageView
            style="@style/RedX"
            android:id="@+id/red_x_12"
            android:layout_toRightOf="@id/soln12"
            android:layout_below="@id/soln11"/>

        <!-- THIRTEEN ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
        <Button
            style="@style/SpeechButton"
            android:id="@+id/megaphone13"
            android:layout_alignBottom="@id/num13"
            android:layout_below="@id/soln12"
            android:background="@drawable/megaphone"
            android:onClick="playWord"/>
        <TextView
            style="@style/WordNumber"
            android:id="@+id/num13"
            android:layout_below="@id/soln12"
            android:layout_toRightOf="@id/megaphone12"
            android:layout_toEndOf="@id/megaphone12"
            android:text="13."/>
        <TextView
            style="@style/WordSoln"
            android:id="@+id/soln13"
            android:layout_toRightOf="@id/num13"
            android:layout_toEndOf="@id/num13"
            android:layout_below="@id/soln12" />
        <ImageView
            style="@style/RedX"
            android:id="@+id/red_x_13"
            android:layout_toRightOf="@id/soln13"
            android:layout_below="@id/soln12"/>

        <!-- FOURTEEN ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
        <Button
            style="@style/SpeechButton"
            android:id="@+id/megaphone14"
            android:layout_alignBottom="@id/num14"
            android:layout_below="@id/soln13"
            android:background="@drawable/megaphone"
            android:onClick="playWord"/>
        <TextView
            style="@style/WordNumber"
            android:id="@+id/num14"
            android:layout_below="@id/soln13"
            android:layout_toRightOf="@id/megaphone13"
            android:layout_toEndOf="@id/megaphone13"
            android:text="14."/>
        <TextView
            style="@style/WordSoln"
            android:id="@+id/soln14"
            android:layout_toRightOf="@id/num14"
            android:layout_toEndOf="@id/num14"
            android:layout_below="@id/soln13" />
        <ImageView
            style="@style/RedX"
            android:id="@+id/red_x_14"
            android:layout_toRightOf="@id/soln14"
            android:layout_below="@id/soln13"/>

        <!-- FIFTEEN ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
        <Button
            style="@style/SpeechButton"
            android:id="@+id/megaphone15"
            android:layout_alignBottom="@id/num15"
            android:layout_below="@id/soln14"
            android:background="@drawable/megaphone"
            android:onClick="playWord"/>
        <TextView
            style="@style/WordNumber"
            android:id="@+id/num15"
            android:layout_below="@id/soln14"
            android:layout_toRightOf="@id/megaphone14"
            android:layout_toEndOf="@id/megaphone14"
            android:text="15."/>
        <TextView
            style="@style/WordSoln"
            android:id="@+id/soln15"
            android:layout_toRightOf="@id/num15"
            android:layout_toEndOf="@id/num15"
            android:layout_below="@id/soln14" />
        <ImageView
            style="@style/RedX"
            android:id="@+id/red_x_15"
            android:layout_toRightOf="@id/soln15"
            android:layout_below="@id/soln14"/>

        <TextView
            style="@style/BannerBox"
            android:layout_width="wrap_content"
            android:id="@+id/score_label"
            android:layout_below="@+id/soln15"
            android:text="Score: " />

        <TextView
            style="@style/BannerBox"
            android:layout_width="wrap_content"
            android:id="@+id/score"
            android:layout_toRightOf="@id/score_label"
            android:layout_below="@id/soln15"/>

        <Button
            style="@style/DifficultyButton"
            android:id="@+id/play_again"
            android:layout_below="@id/score_label"
            android:text="@string/play_again"
            android:onClick="playAgain"/>

        <Button
            style="@style/DifficultyButton"
            android:id="@+id/back_home"
            android:layout_below="@id/play_again"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            android:text="@string/back_home"
            android:onClick="backHome"/>

    </RelativeLayout>

</ScrollView>